--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>菜鸟教程(runoob.com)</title>
 </head>
 <body>
-    <h1>我的第一个标题</h1>
-    <p>我的第一个段落。</p>
+    <h1>Access rejected lol</h1>
 </body>
 </html>
