--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+<title>=(</title>
 </head>
 <body>
     <h1>Access rejected lol</h1>
-    <link rel="first" type="text/css" href="index.css">
+    <link rel="first" type="text/css" href="\index.css">
 </body>
 </html>
