--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>=(</title>
 </head>
 <body>
-    <h1>Access rejected lol</h1>
-    <link rel="first" type="text/css" href="\index.css">
+    <h1>Access rejected</h1>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </body>
 </html>
