--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>=(</title>
+<style type"text/css">
+h1{color:red;}
+</style>
 </head>
 <body>
     <h1>Access rejected</h1>
-    <link rel="stylesheet" type="text/css" href="index.css">
+   
 </body>
 </html>
