--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <title>=(</title>
 <style type"text/css">
-h1{color:red;}
+h1{color:white;background:black;}
 </style>
 </head>
 <body>
-    <h1>Access rejected</h1>
+    <h1>Access rejected lol</h1>
    
 </body>
 </html>
