--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>=(</title>
+<link rel="first" type"text/css" href"index.css">
 <style type"text/css">
 h1{color:white;background:black;}
 </style>
