--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>=(</title>
-<link rel="first" type"text/css" href"index.css">
+<link rel="stylesheet" type="text/css" href="index.css"> 
 <style type"text/css">
 h1{color:white;background:black;}
 </style>
 </head>
 <body>
-    <h1>Access rejected lol</h1>
+    <a href="dogisyyds.github.io" type="text/html">"<h1>Access rejected lol</h1></a>
    
 </body>
 </html>
