--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ h1{color:white;background:black;}
 </style>
 </head>
 <body>
-<a href="enterbox.github.io" type="text/html">"<h1>Access rejected lol</h1></a>
+<a href="enterbox.github.io">"<h1>Access rejected lol</h1></a>
+<button type="button" onclick="alert('看啥看?')">神经大按钮(</button>
 <p>never gonna give you up，never gonna let you down</p>
 <p>never gonna run around and desert you (Get rickrolled lol)</p>
 </body>
