--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 <link rel="stylesheet" type="text/css" href="index.css"> 
 <style type"text/css">
 h1{color:white;background:black;}
+a:link{text–decoration:none}
+a:link{text–decoration:none}
+a:hover{color:blue}
 </style>
 </head>
 <body>
 <a href="https://enterbox.github.io">"<h1>Access rejected lol</h1></a>
-<button type="button" onclick="alert('看啥看?')">神经大按钮(</button>
+<button type="button" onclick="alert('看啥看?')">神经大按钮</button>
 <p>never gonna give you up，never gonna let you down</p>
 <p>never gonna run around and desert you (Get rickrolled lol)</p>
 </body>
