--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>=(</title>
-<link rel="stylesheet" type="text/css" href="index.css"> 
+<i><title>=(</title></i>
+<link rel="first" type="text/css" href="index.css"> 
 <style type"text/css">
 h1{color:white;background:black;}
 a:link{text–decoration:none}
-a:link{text–decoration:none}
+a:visited{text–decoration:none}
 a:hover{color:blue}
 </style>
 </head>
