--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@ a:hover{color:blue}
 <body>
 <a href="https://enterbox.github.io">"<h1>Access rejected lol</h1></a>
 <script>
-
+function troll(){
+  setinterval(function()alert("=)"),1000);
+}
 </script>
 <button type="button" onclick="troll()">神经大按钮</button>
 <p>never gonna give you up，never gonna let you down</p>
