--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <i><title>=(</title></i>
 <link rel="first" type="text/css" href="index.css"> 
 <style type"text/css">
+body{color:grey}
 h1{color:white;background:black;}
 a:link{text–decoration:none}
 a:visited{text–decoration:none}
