--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 <i><title>=(</title></i>
 <link rel="first" type="text/css" href="index.css"> 
 <style type"text/css">
+shape.sticky{
+position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 5px;
+  background-color: #aaaaaa;
+  border: 2px solid #ffffff;
+}
 body{color:grey}
 h1{color:white;background:black;}
 a:link{text–decoration:none}
