--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <i><title>=(</title></i>
 <link rel="first" type="text/css" href="index.css"> 
 <style type"text/css">
-shape.sticky{
-position: -webkit-sticky;
+div.sticky{
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
-  padding: 5px;
+  padding: 8px;
   background-color: #aaaaaa;
   border: 2px solid #ffffff;
 }
@@ -21,6 +21,7 @@ a:hover{color:blue}
 </style>
 </head>
 <body>
+<div class="sticky">这个网页就是一坨答辩，别看了<>
 <a href="https://enterbox.github.io">"<h1>Access rejected lol</h1></a>
 <script>
 function troll(){
