--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ a:hover{color:blue}
 </style>
 </head>
 <body>
-<div class="sticky">这个网页就是一坨答辩，别看了<>
-<a href="https://enterbox.github.io">"<h1>Access rejected lol</h1></a>
+<div class="sticky">这个网页就是一坨答辩，别看了</div>
+<a href="https://enterbox.github.io"><h1>Access rejected lol</h1></a>
 <script>
 function troll(){
   setinterval(function()alert("=)"),1000);
