--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<i><title>=(</title></i>
+<title>=(</title>
 <link rel="first" type="text/css" href="index.css"> 
 <style type"text/css">
 div.sticky{
@@ -21,13 +21,52 @@ a:hover{color:blue}
 </style>
 </head>
 <body>
-<div class="sticky">这个网页就是一坨答辩，别看了</div>
 <a href="https://enterbox.github.io"><h1>Access rejected lol</h1></a>
+<div class="sticky">这个网页就是一坨答辩，别看了</div>
 <script>
 function troll(){
   setinterval(function()alert("=)"),1000);
 }
 </script>
 <button type="button" onclick="troll()">神经大按钮</button>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
 </body>
 </html>
