--- a/index.html
+++ b/index.html
@@ -29,46 +29,8 @@ function troll(){
 }
 </script>
 <button type="button" onclick="troll()">神经大按钮</button>
-  o
-  
-  o
-  
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
-
-  o
+<div style="padding-bottom:3000px">
+  <p>往下滚动试试</p>
+</div>
 </body>
 </html>
