--- a/index.html
+++ b/index.html
@@ -23,14 +23,10 @@ a:hover{color:blue}
 <body>
 <a href="https://enterbox.github.io"><h1>Access rejected lol</h1></a>
 <div class="sticky">这个网页就是一坨答辩，别看了</div>
-<script>
-function troll(){
-  setinterval(function()alert("=)"),1000);
-}
-</script>
-<button type="button" onclick="troll()">神经大按钮</button>
-<div style="padding-bottom:3000px">
-  <p>往下滚动试试</p>
+<div style="padding-bottom:3000px"></div>
+<div style="height:300px;width:100px;overflow:auto;background:#FFFFFF;color:#000000">
+我为啥要写这个?
+因为我膳=）
 </div>
 </body>
 </html>
