--- a/index.html
+++ b/index.html
@@ -2,31 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>=(</title>
-<link rel="first" type="text/css" href="index.css"> 
-<style type"text/css">
-div.sticky{
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  padding: 8px;
-  background-color: #aaaaaa;
-  border: 2px solid #ffffff;
+<title>How To Play The Game --powered by dogisyyds</title>
+<style> 
+#rcorners1 {
+    border-radius: 25px;
+    border: 2px solid #AAAAAA;
+    background: #666666;
+    padding: 20px; 
+    width: 200px;
+    height: 150px;    
 }
-body{color:grey}
-h1{color:white;background:black;}
-a:link{text–decoration:none}
-a:visited{text–decoration:none}
-a:hover{color:blue}
 </style>
 </head>
 <body>
-<a href="https://enterbox.github.io"><h1>Access rejected lol</h1></a>
-<div class="sticky">这个网页就是一坨答辩，别看了</div>
-<div style="padding-bottom:3000px"></div>
-<div style="height:300px;width:100px;overflow:auto;background:#FFFFFF;color:#000000">
-我为啥要写这个?
-因为我膳=）
-</div>
+<p id="rcorners1">Sorry still in making</p>
 </body>
 </html>
